# redfish-client-sdk

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bench/: run_bench.py
cpp/: CMakeLists.txt  requirements.txt
cpp/docs/: api-guide.md
cpp/include/redfish_sdk/: client.hpp  context.hpp  errors.hpp  event_listener.hpp
cpp/include/redfish_sdk/discovery/: discovery.hpp
cpp/include/redfish_sdk/models/: redfish_types.hpp
cpp/include/redfish_sdk/protocol/: response.hpp  task.hpp
cpp/include/redfish_sdk/services/: event_service.hpp  log_service.hpp  ras_service.hpp  telemetry_service.hpp  update_service.hpp
cpp/include/redfish_sdk/transport/: auth.hpp  http_client.hpp  tls.hpp
cpp/samples/: 01_connect_discover.cpp  02_partial_discover.cpp  03_get_resources.cpp  04_direct_api.cpp  05_event_subscribe.cpp  06_event_listener.cpp  07_event_monitor.cpp  08_log_service.cpp  09_telemetry.cpp  10_update_service.cpp  11_task_polling.cpp  12_session_vs_stateless.cpp  13_retry_and_refresh.cpp  14_sel_parsing.cpp  15_multipart_upload.cpp  README.md
cpp/src/: client.cpp  context.cpp
cpp/src/discovery/: discovery.cpp
cpp/src/events/: listener.cpp
cpp/src/internal/: logger.hpp
cpp/src/models/: redfish_types.cpp
cpp/src/protocol/: response.cpp  task.cpp
cpp/src/services/: event_service.cpp  log_service.cpp  ras_service.cpp  telemetry_service.cpp  update_service.cpp
cpp/src/transport/: auth.cpp  http_client.cpp  tls.cpp
docs/: QUICKSTART.md  RedfishLoggingTechniques.md  performance.md  requirements.md
docs/architecture/: architecture-cpp.md  architecture-python.md  architecture-rust.md  architecture-sdk.md
docs/design/: design-cpp.md  design-python.md  design-rust.md
python/: pyproject.toml  requirements-dev.txt  requirements.txt
python/docs/: api-guide.md
python/redfish_sdk/: __init__.py  client.py  context.py  errors.py
python/redfish_sdk/discovery/: __init__.py  discovery.py
python/redfish_sdk/events/: listener.py
python/redfish_sdk/models/: redfish_types.py
python/redfish_sdk/protocol/: registry.py  response.py  task.py
python/redfish_sdk/services/: event_service.py  log_service.py  ras_service.py  telemetry_service.py  update_service.py
python/redfish_sdk/transport/: __init__.py  auth.py  http_client.py  tls.py
python/samples/: 01_connect_discover.py  02_partial_discover.py  03_get_resources.py  04_direct_api.py  05_event_subscribe.py  06_event_listener.py  07_event_monitor.py  08_log_service.py  09_telemetry.py  10_update_service.py  11_task_polling.py  12_session_vs_stateless.py  13_retry_and_refresh.py  14_sel_parsing.py  15_multipart_upload.py  README.md
python/tests/: test_mock_transport.py  test_quickstart.py  test_ras_service.py
rust/: Cargo.toml  requirements.txt
rust/redfish-sdk/: Cargo.toml
rust/redfish-sdk/src/: client.rs  context.rs  errors.rs  lib.rs
rust/redfish-sdk/src/discovery/: discovery.rs  mod.rs
rust/redfish-sdk/src/events/: listener.rs  mod.rs
rust/redfish-sdk/src/protocol/: mod.rs  registry.rs  response.rs  task.rs
rust/redfish-sdk/src/services/: event_service.rs  log_service.rs  mod.rs  ras_service.rs  telemetry_service.rs  update_service.rs
rust/redfish-sdk/src/transport/: auth.rs  http_client.rs  mod.rs  types.rs
rust/samples/: Cargo.toml  README.md
tests/certs/: server.crt
