[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redfish-sdk"
version = "0.1.0"
description = "A Python SDK for building clients against any Redfish-compliant endpoint"
readme = "docs/api-guide.md"
requires-python = ">=3.10"
license = { file = "../LICENSE" }
authors = [
    { name = "Microsoft Corporation" }
]
urls = { repository = "https://github.com/harira-microsoft/redfish-client-sdk" }
keywords = ["redfish", "bmc", "ipmi", "hardware", "management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["redfish_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
